# PlayPalace11

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_COMPLETE.md  NIXOS_SETUP.md  README.md  flake.nix  game-claude.md  ruff.toml  shell.nix
clients/desktop/: Containerfile  PlayPalace.spec  buffer_system.py  build.ps1  build.sh  certificate_prompt.py  client.py  config_manager.py  config_schemas.py  constants.py  network_manager.py  packet_schema.json  packet_validator.py  pyinstaller_runtime.py  pyproject.toml  run_client.bat  sound_cacher.py  sound_manager.py
server/: Containerfile  __main__.py  build.ps1  build.sh  cli.py  config.example.toml  main.py  packet_schema.json  pyproject.toml
server/auth/: auth.py
server/core/: __init__.py  administration.py  config_paths.py  server.py  state.py  tick.py  virtual_bots.py
server/documents/: _metadata.json
server/game_utils/: action_execution_mixin.py  action_set_creation_mixin.py  action_visibility_mixin.py  actions.py  dice.py  dice_game_mixin.py  duration_estimate_mixin.py  event_handling_mixin.py  game_communication_mixin.py  game_prediction_mixin.py  game_result_mixin.py  game_scores_mixin.py  game_sound_mixin.py  lobby_actions_mixin.py  menu_management_mixin.py  options.py  poker_keybinds.py  poker_payout.py  push_your_luck_mixin.py  teams.py  turn_management_mixin.py
server/games/: __init__.py  base.py  games_feedback.txt  twentyone.py
server/locales/: README.md
server/messages/: localization.py
server/network/: __init__.py  packet_models.py  websocket_server.py
server/persistence/: database.py
server/tests/: conftest.py  test_active_tables_menu.py  test_administration.py  test_ageofheroes.py  test_battleship.py  test_blackjack.py  test_chaosbear.py  test_cli_bootstrap.py  test_config_paths.py  test_crazyeights.py  test_database.py  test_dice_action_id.py  test_document_manager.py  test_dominos.py  test_event_handling_mixin.py  test_farkle.py  test_fivecarddraw.py  test_game_utils_lobby_actions.py  test_game_utils_mixins.py  test_ludo.py  (+86 more)
(+1065 files in other folders)
