[project]
name = "playpalace-server"
version = "11.0.0"
description = "PlayPalace v11 Game Server"
readme = "../docs/design/plans/overview.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=14.0",
    "mashumaro>=3.11",
    "fluent-compiler>=1.0",
    "babel>=2.14",
    "openskill>=6.1.3",
    "argon2-cffi>=23.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
playpalace-server = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [".."]
markers = [
    "slow: marks tests that require --runslow to execute",
]

filterwarnings = [
    "ignore:.*arguments.__init__ got an unexpected keyword argument 'lineno'.*:DeprecationWarning:fluent_compiler",
    "ignore:.*arguments.__init__ got an unexpected keyword argument 'col_offset'.*:DeprecationWarning:fluent_compiler",
    "ignore:.*If.__init__ missing 1 required positional argument.*:DeprecationWarning:fluent_compiler",
    "ignore:.*Module.__init__ got an unexpected keyword argument.*:DeprecationWarning:fluent_compiler",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
[tool.hatch.build.targets.wheel.force-include]
"locales" = "server/locales"
"../clients/desktop/sounds" = "server/audio"
