[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playpalace-client"
version = "11.0.0"
description = "PlayPalace v11 Game Client"
requires-python = ">=3.13"
dependencies = [
    "wxPython>=4.2.5",
    "accessible-output2>=0.16",
    "websockets>=14.0",
    "sound-lib>=0.2.2",
    "pydantic>=2.0",
    "jsonschema>=4.21",
]

[project.scripts]
playpalace-client = "client:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
